--- a/MaikonWhoscall切版/Maikon.css
+++ b/MaikonWhoscall切版/Maikon.css
@@ -181,7 +181,7 @@
     margin: 100px 0;
 }
 
-.services {
+.services{
     max-width: 1200px;
     margin: auto;
     padding-left: 15px;
@@ -189,14 +189,15 @@
 }
 
 .services-title h2 {
+    margin-left: 20px;
     font-size: 36px;
     font-weight: 500;
 }
 
+.services-list{
+    margin-left: 20px;
+}
 .services-list-item {
-    margin-top: 20px;
-    margin-left: 15px;
-    margin-right: 15px;
     height: 100%;
     align-content: center;
 }
@@ -204,14 +205,12 @@
 .services-list .col-12 {
     display: inline-block;
     padding: 15px;
-    width: 375px;
-    margin-top: 0;
+    width: 375px;;
     vertical-align: baseline;
 }
 
 
 .service-list-item-decoration {
-    height: 426px;
     border-radius: 10px;
     padding: 40px;
     box-shadow: 0px 0px 20px 5px rgb(236, 236, 251);
